Update for debian/4.0.0-2.
This was needed to ensure that the itpp.spec and itpp-config.1 files
were restored during clean to return to a state similar to a fresh
tarball unpack.

Signed-off-by: Kumar Appaiah <akumar@ee.iitm.ac.in>

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libitpp
 Priority: optional
 Maintainer: Kumar Appaiah <akumar@ee.iitm.ac.in>
-Build-Depends: debhelper (>= 5), autotools-dev, doxygen (>= 1.5.1-1), refblas3-dev, fftw3-dev, texlive-latex-base, gs, lapack3-dev
+Build-Depends: debhelper (>= 5), autotools-dev, doxygen (>= 1.5.1-1), refblas3-dev, fftw3-dev, texlive-latex-base, gs, lapack3-dev, dpatch
 Standards-Version: 3.7.2
 Section: libs
 Homepage: http://itpp.sourceforge.net
