--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,9 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+# Use dpatch
+include /usr/share/dpatch/dpatch.make
+
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -17,30 +20,27 @@ else
 endif
 
 config.status: configure
-# Workaround to end up with a clean state equal to a fresh tarball unpack.
-	-cp itpp-config.1 itpp-config.1.backup
-	-cp itpp.spec itpp.spec.backup
 	dh_testdir
 	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CXXFLAGS="$(CXXFLAGS)" LDFLAGS="-Wl,-z,defs"
 
 build: build-stamp
 
-build-stamp: config.status
+build-stamp: config.status patch-stamp
 	dh_testdir
 	$(MAKE)
 	$(MAKE) check
 	touch $@
 
-clean:
+# We need to clean before unpatching. So, shift the clean rule.
+clean-real:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp config.log
 	[ ! -f Makefile ] || $(MAKE) distclean
 	rm -f config.status config.sub
-# Workaround to end up with a clean state equal to a fresh tarball unpack.
-	-mv itpp-config.1.backup itpp-config.1
-	-mv itpp.spec.backup itpp.spec
 	dh_clean 
+
+clean: clean-real unpatch
 
 install: build
 	dh_testdir
