--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Build-Depends: debhelper (>= 5), autotools-dev, doxygen (>= 1.5.1-1), refblas3-d
 Standards-Version: 3.7.2
 Section: libs
 Homepage: http://itpp.sourceforge.net
+Vcs-Git: git://git.debian.org/git/collab-maint/libitpp.git
+Vcs-Browser: http://git.debian.org/?p=collab-maint/libitpp.git
 
 Package: libitpp-dev
 Section: libdevel
