--- a/debian/control
+++ b/debian/control
@@ -1,17 +1,15 @@
 Source: libitpp
 Priority: optional
 Maintainer: Kumar Appaiah <akumar@ee.iitm.ac.in>
-Build-Depends: debhelper (>= 5), autotools-dev, doxygen (>= 1.5.1-1), refblas3-dev, fftw3-dev, texlive-latex-base, gs, lapack3-dev, dpatch
+Build-Depends: debhelper (>= 5), autotools-dev, doxygen (>= 1.5.1-1), refblas3-dev (>= 1.2-9), fftw3-dev, texlive-latex-base, gs, lapack3-dev (>= 3.1.1-0.1), dpatch, gfortran
 Standards-Version: 3.7.2
 Section: libs
 Homepage: http://itpp.sourceforge.net
-Vcs-Git: git://git.debian.org/git/collab-maint/libitpp.git
-Vcs-Browser: http://git.debian.org/?p=collab-maint/libitpp.git
 
 Package: libitpp-dev
 Section: libdevel
 Architecture: any
-Depends: libitpp6 (= ${binary:Version})
+Depends: libitpp6gf (= ${binary:Version})
 Description: C++ signal processing and communication library: Development headers
  IT++ is a C++ library of mathematical, signal processing, speech
  processing, and communications classes and functions. It is being
@@ -20,9 +18,11 @@ Description: C++ signal processing and communication library: Development header
  .
  This package has the development librariesand headers for IT++.
 
-Package: libitpp6
+Package: libitpp6gf
 Section: libs
 Architecture: any
+Conflicts: libitpp6
+Replaces: libitpp6
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: C++ signal processing and communication library
  IT++ is a C++ library of mathematical, signal processing, speech
@@ -37,7 +37,7 @@ Package: libitpp6-dbg
 Section: libs
 Priority: extra
 Architecture: any
-Depends: libitpp6 (= ${binary:Version})
+Depends: libitpp6gf (= ${binary:Version})
 Description: C++ signal processing and communication library: Debug symbols
  IT++ is a C++ library of mathematical, signal processing, speech
  processing, and communications classes and functions. It is being
