--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Standards-Version: 3.7.3
 Build-Depends: debhelper (>= 5), autotools-dev, doxygen (>= 1.5.1-1), libblas-dev, fftw3-dev, texlive-latex-base, gs, liblapack-dev, dpatch, gfortran
 Section: libs
 Homepage: http://itpp.sourceforge.net
+Vcs-Git: git://git.debian.org/git/collab-maint/libitpp.git
+Vcs-Browser: http://git.debian.org/?p=collab-maint/libitpp.git
 
 Package: libitpp-dev
 Section: libdevel
