Add Build-Conflicts on atlas3-base-dev, and remove cleanup patch.
Signed-off-by: Kumar Appaiah <akumar@ee.iitm.ac.in>

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: libitpp
 Priority: optional
 Maintainer: Kumar Appaiah <akumar@ee.iitm.ac.in>
-Build-Depends: debhelper (>= 5), autotools-dev, doxygen (>= 1.5.1-1), refblas3-dev, libfftw3-dev, texlive-latex-base, gs, lapack3-dev, dpatch
+Build-Depends: debhelper (>= 5), doxygen (>= 1.5.1-1), refblas3-dev, libfftw3-dev, texlive-latex-base, gs, lapack3-dev
+Build-Conflicts: atlas3-base-dev
 Standards-Version: 3.7.3
 Section: libs
 Homepage: http://itpp.sourceforge.net
