--- a/debian/rules
+++ b/debian/rules
@@ -3,9 +3,6 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# Use dpatch
-include /usr/share/dpatch/dpatch.make
-
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -31,22 +28,19 @@ config.status: configure
 
 build: build-stamp
 
-build-stamp: config.status patch-stamp
+build-stamp: config.status
 	dh_testdir
 	$(MAKE)
 	$(MAKE) check
 	touch $@
 
-# We need to clean before unpatching. So, shift the clean rule.
-clean-real:
+clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp config.log
 	[ ! -f Makefile ] || $(MAKE) distclean
 	rm -f config.status config.sub
 	dh_clean 
-
-clean: clean-real unpatch
 
 install: build
 	dh_testdir
