--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,9 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+# Use quilt for patch management.
+include /usr/share/quilt/quilt.make
+
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -28,13 +31,13 @@ config.status: configure
 
 build: build-stamp
 
-build-stamp: config.status
+build-stamp: patch config.status
 	dh_testdir
 	$(MAKE)
 	$(MAKE) check
 	touch $@
 
-clean:
+clean: unpatch
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp config.log
