--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libitpp
 Priority: optional
 Maintainer: Kumar Appaiah <akumar@ee.iitm.ac.in>
 Standards-Version: 3.7.3
-Build-Depends: debhelper (>= 5), autotools-dev, doxygen (>= 1.5.1-1), libblas-dev, fftw3-dev, texlive-latex-base, gs, liblapack-dev, dpatch, gfortran
+Build-Depends: debhelper (>= 5), autotools-dev, doxygen (>= 1.5.1-1), libblas-dev, fftw3-dev, texlive-latex-base, gs, liblapack-dev, quilt, gfortran-4.3
 Section: libs
 Homepage: http://itpp.sourceforge.net
 Vcs-Git: git://git.debian.org/git/collab-maint/libitpp.git
