--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,9 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+# Use quilt for patch management.
+include /usr/share/quilt/quilt.make
+
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -24,22 +27,24 @@ endif
 
 config.status: configure
 	dh_testdir
-	F77=gfortran ./configure $(CROSS) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CXXFLAGS="$(CXXFLAGS)" --with-blas=-lblas --with-lapack=-llapackgf-3 LDFLAGS="-Wl,-z,defs"
+	./configure $(CROSS) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CXXFLAGS="$(CXXFLAGS)" LDFLAGS="-Wl,-z,defs"
 
 build: build-stamp
 
-build-stamp: config.status
+build-stamp: patch config.status
 	dh_testdir
 	$(MAKE)
 	$(MAKE) check
 	touch $@
 
-clean:
+clean_real:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp config.log
 	[ ! -f Makefile ] || $(MAKE) distclean
 	dh_clean 
+
+clean: clean_real unpatch
 	rm -f config.status config.sub
 
 install: build
@@ -51,24 +56,37 @@ install: build
 	$(MAKE) DESTDIR=$(CURDIR)/debian/tmp install
 
 binary-indep: build install
+	dh_testdir -i
+	dh_testroot -i
+	dh_installchangelogs -i ChangeLog
+	dh_installdocs -i
+	dh_install -i --sourcedir=debian/tmp
+	dh_installman -i
+	dh_link -i
+	dh_compress -i
+	dh_fixperms -i
+	dh_installdeb -i
+	dh_gencontrol -i
+	dh_md5sums -i
+	dh_builddeb -i
 
 binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs ChangeLog
-	dh_installdocs
-	dh_install --sourcedir=debian/tmp
-	dh_installman
-	dh_link
-	dh_strip --dbg-package=libitpp6-dbg
-	dh_compress
-	dh_fixperms
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh_testdir -a
+	dh_testroot -a
+	dh_installchangelogs -a ChangeLog
+	dh_installdocs -a
+	dh_install -a --sourcedir=debian/tmp
+	dh_installman -a
+	dh_link -a
+	dh_strip -a --dbg-package=libitpp6-dbg
+	dh_compress -a
+	dh_fixperms -a
+	dh_makeshlibs -a
+	dh_installdeb -a
+	dh_shlibdeps -a
+	dh_gencontrol -a
+	dh_md5sums -a
+	dh_builddeb -a
 
 binary: binary-indep binary-arch
 
