--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -57,8 +57,7 @@ subdir = doc
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/ac_cxx_extern_template.m4 \
 	$(top_srcdir)/m4/acx_blas.m4 $(top_srcdir)/m4/acx_fft.m4 \
-	$(top_srcdir)/m4/acx_lapack.m4 \
-	$(top_srcdir)/m4/ax_func_zdotu.m4 $(top_srcdir)/configure.ac
+	$(top_srcdir)/m4/acx_lapack.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
@@ -102,6 +101,7 @@ CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
 DIFF = @DIFF@
+DSYMUTIL = @DSYMUTIL@
 ECHO = @ECHO@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
@@ -129,6 +129,7 @@ LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
+NMEDIT = @NMEDIT@
 NO_UNDEFINED = @NO_UNDEFINED@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
@@ -318,6 +319,9 @@ cpp_base_sources = \
 	$(top_srcdir)/itpp/base/svec.cpp \
 	$(top_srcdir)/itpp/base/timing.cpp \
 	$(top_srcdir)/itpp/base/vec.cpp
+
+f_base_sources = \
+	$(top_srcdir)/itpp/base/zdotusub.f
 
 noinst_h_base_algebra_sources = \
 	$(top_srcdir)/itpp/base/algebra/lapack.h
