--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -56,11 +56,11 @@ CONFIG_HEADER = $(top_builddir)/itpp/config.h
 CONFIG_CLEAN_FILES =
 am__EXEEXT_1 = array_test$(EXEEXT) bessel_test$(EXEEXT) \
 	blas_test$(EXEEXT) circular_buffer_test$(EXEEXT) \
-	fastmath_test$(EXEEXT) gf2mat_test$(EXEEXT) \
-	integration_test$(EXEEXT) itfile_test$(EXEEXT) \
-	mat_test$(EXEEXT) parser_test$(EXEEXT) rand_test$(EXEEXT) \
-	sort_test$(EXEEXT) sparse_test$(EXEEXT) timer_test$(EXEEXT) \
-	vec_test$(EXEEXT)
+	converters_test$(EXEEXT) fastmath_test$(EXEEXT) \
+	gf2mat_test$(EXEEXT) integration_test$(EXEEXT) \
+	itfile_test$(EXEEXT) mat_test$(EXEEXT) parser_test$(EXEEXT) \
+	rand_test$(EXEEXT) sort_test$(EXEEXT) sparse_test$(EXEEXT) \
+	timer_test$(EXEEXT) vec_test$(EXEEXT)
 am__EXEEXT_2 = histogram_test$(EXEEXT)
 am__EXEEXT_3 = cholesky_test$(EXEEXT) det_test$(EXEEXT) \
 	eigen_test$(EXEEXT) inv_test$(EXEEXT) ls_solve_test$(EXEEXT) \
@@ -69,11 +69,11 @@ am__EXEEXT_3 = cholesky_test$(EXEEXT) det_test$(EXEEXT) \
 am__EXEEXT_4 = stat_test$(EXEEXT)
 @RUN_LAPACK_TESTS_TRUE@am__EXEEXT_5 = $(am__EXEEXT_3) $(am__EXEEXT_4)
 am__EXEEXT_6 = bch_test$(EXEEXT) commfunc_test$(EXEEXT) \
-	convcode_test$(EXEEXT) galois_test$(EXEEXT) \
-	interleaver_test$(EXEEXT) ldpc_test$(EXEEXT) llr_test$(EXEEXT) \
-	modulator_test$(EXEEXT) pulse_shape_test$(EXEEXT) \
-	rec_syst_conv_code_test$(EXEEXT) reedsolomon_test$(EXEEXT) \
-	turbo_test$(EXEEXT)
+	convcode_test$(EXEEXT) error_count_test$(EXEEXT) \
+	galois_test$(EXEEXT) interleaver_test$(EXEEXT) \
+	ldpc_test$(EXEEXT) llr_test$(EXEEXT) modulator_test$(EXEEXT) \
+	pulse_shape_test$(EXEEXT) rec_syst_conv_code_test$(EXEEXT) \
+	reedsolomon_test$(EXEEXT) turbo_test$(EXEEXT)
 @ENABLE_COMM_TRUE@am__EXEEXT_7 = $(am__EXEEXT_6)
 am__EXEEXT_8 = modulator_nd_test$(EXEEXT)
 @ENABLE_COMM_TRUE@@RUN_LAPACK_TESTS_TRUE@am__EXEEXT_9 =  \
@@ -137,6 +137,10 @@ am_convcode_test_OBJECTS = convcode_test.$(OBJEXT)
 convcode_test_OBJECTS = $(am_convcode_test_OBJECTS)
 convcode_test_LDADD = $(LDADD)
 convcode_test_DEPENDENCIES = $(top_builddir)/itpp/libitpp.la
+am_converters_test_OBJECTS = converters_test.$(OBJEXT)
+converters_test_OBJECTS = $(am_converters_test_OBJECTS)
+converters_test_LDADD = $(LDADD)
+converters_test_DEPENDENCIES = $(top_builddir)/itpp/libitpp.la
 am_det_test_OBJECTS = det_test.$(OBJEXT)
 det_test_OBJECTS = $(am_det_test_OBJECTS)
 det_test_LDADD = $(LDADD)
@@ -145,6 +149,10 @@ am_eigen_test_OBJECTS = eigen_test.$(OBJEXT)
 eigen_test_OBJECTS = $(am_eigen_test_OBJECTS)
 eigen_test_LDADD = $(LDADD)
 eigen_test_DEPENDENCIES = $(top_builddir)/itpp/libitpp.la
+am_error_count_test_OBJECTS = error_count_test.$(OBJEXT)
+error_count_test_OBJECTS = $(am_error_count_test_OBJECTS)
+error_count_test_LDADD = $(LDADD)
+error_count_test_DEPENDENCIES = $(top_builddir)/itpp/libitpp.la
 am_fastica_test_OBJECTS = fastica_test-fastica_test.$(OBJEXT)
 fastica_test_OBJECTS = $(am_fastica_test_OBJECTS)
 fastica_test_LDADD = $(LDADD)
@@ -328,8 +336,9 @@ SOURCES = $(array_test_SOURCES) $(bch_test_SOURCES) \
 	$(bessel_test_SOURCES) $(blas_test_SOURCES) \
 	$(channel_test_SOURCES) $(cholesky_test_SOURCES) \
 	$(circular_buffer_test_SOURCES) $(commfunc_test_SOURCES) \
-	$(convcode_test_SOURCES) $(det_test_SOURCES) \
-	$(eigen_test_SOURCES) $(fastica_test_SOURCES) \
+	$(convcode_test_SOURCES) $(converters_test_SOURCES) \
+	$(det_test_SOURCES) $(eigen_test_SOURCES) \
+	$(error_count_test_SOURCES) $(fastica_test_SOURCES) \
 	$(fastmath_test_SOURCES) $(filter_design_test_SOURCES) \
 	$(filter_test_SOURCES) $(fix_test_SOURCES) \
 	$(freq_filt_test_SOURCES) $(galois_test_SOURCES) \
@@ -354,8 +363,9 @@ DIST_SOURCES = $(array_test_SOURCES) $(bch_test_SOURCES) \
 	$(bessel_test_SOURCES) $(blas_test_SOURCES) \
 	$(channel_test_SOURCES) $(cholesky_test_SOURCES) \
 	$(circular_buffer_test_SOURCES) $(commfunc_test_SOURCES) \
-	$(convcode_test_SOURCES) $(det_test_SOURCES) \
-	$(eigen_test_SOURCES) $(fastica_test_SOURCES) \
+	$(convcode_test_SOURCES) $(converters_test_SOURCES) \
+	$(det_test_SOURCES) $(eigen_test_SOURCES) \
+	$(error_count_test_SOURCES) $(fastica_test_SOURCES) \
 	$(fastmath_test_SOURCES) $(filter_design_test_SOURCES) \
 	$(filter_test_SOURCES) $(fix_test_SOURCES) \
 	$(freq_filt_test_SOURCES) $(galois_test_SOURCES) \
@@ -507,16 +517,16 @@ top_srcdir = @top_srcdir@
 AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir)
 LDADD = $(top_builddir)/itpp/libitpp.la
 AM_CXXFLAGS = $(CXXFLAGS_OPT)
-BASE_TESTS = array_test bessel_test blas_test circular_buffer_test	\
-  fastmath_test gf2mat_test integration_test itfile_test mat_test	\
-  parser_test rand_test sort_test sparse_test timer_test vec_test
+BASE_TESTS = array_test bessel_test blas_test circular_buffer_test	   \
+  converters_test fastmath_test gf2mat_test integration_test itfile_test   \
+  mat_test parser_test rand_test sort_test sparse_test timer_test vec_test
 
 BASE_LAP_TESTS = cholesky_test det_test eigen_test inv_test ls_solve_test \
   lu_test matfunc_test qr_test schur_test svd_test
 
-COMM_TESTS = bch_test commfunc_test convcode_test galois_test		\
-  interleaver_test ldpc_test llr_test modulator_test pulse_shape_test	\
-  rec_syst_conv_code_test reedsolomon_test turbo_test
+COMM_TESTS = bch_test commfunc_test convcode_test error_count_test	\
+  galois_test interleaver_test ldpc_test llr_test modulator_test	\
+  pulse_shape_test rec_syst_conv_code_test reedsolomon_test turbo_test
 
 COMM_LAP_TESTS = modulator_nd_test
 COMM_FFT_TESTS = channel_test
@@ -542,6 +552,7 @@ bch_test_SOURCES = bch_test.cpp
 bessel_test_SOURCES = bessel_test.cpp
 blas_test_SOURCES = blas_test.cpp
 channel_test_SOURCES = channel_test.cpp
+converters_test_SOURCES = converters_test.cpp
 itfile_test_SOURCES = itfile_test.cpp
 itfile_test_CPPFLAGS = -DITFILE_TEST_FILE=\"$(srcdir)/itfile_test_data.it\" $(AM_CPPFLAGS)
 cholesky_test_SOURCES = cholesky_test.cpp
@@ -550,6 +561,7 @@ commfunc_test_SOURCES = commfunc_test.cpp
 convcode_test_SOURCES = convcode_test.cpp
 det_test_SOURCES = det_test.cpp
 eigen_test_SOURCES = eigen_test.cpp
+error_count_test_SOURCES = error_count_test.cpp
 fastica_test_SOURCES = fastica_test.cpp
 fastica_test_CPPFLAGS = -DFASTICA_TEST_FILE=\"$(srcdir)/fastica_test_data.txt\" $(AM_CPPFLAGS)
 fastmath_test_SOURCES = fastmath_test.cpp
@@ -664,12 +676,18 @@ commfunc_test$(EXEEXT): $(commfunc_test_OBJECTS) $(commfunc_test_DEPENDENCIES)
 convcode_test$(EXEEXT): $(convcode_test_OBJECTS) $(convcode_test_DEPENDENCIES) 
 	@rm -f convcode_test$(EXEEXT)
 	$(CXXLINK) $(convcode_test_OBJECTS) $(convcode_test_LDADD) $(LIBS)
+converters_test$(EXEEXT): $(converters_test_OBJECTS) $(converters_test_DEPENDENCIES) 
+	@rm -f converters_test$(EXEEXT)
+	$(CXXLINK) $(converters_test_OBJECTS) $(converters_test_LDADD) $(LIBS)
 det_test$(EXEEXT): $(det_test_OBJECTS) $(det_test_DEPENDENCIES) 
 	@rm -f det_test$(EXEEXT)
 	$(CXXLINK) $(det_test_OBJECTS) $(det_test_LDADD) $(LIBS)
 eigen_test$(EXEEXT): $(eigen_test_OBJECTS) $(eigen_test_DEPENDENCIES) 
 	@rm -f eigen_test$(EXEEXT)
 	$(CXXLINK) $(eigen_test_OBJECTS) $(eigen_test_LDADD) $(LIBS)
+error_count_test$(EXEEXT): $(error_count_test_OBJECTS) $(error_count_test_DEPENDENCIES) 
+	@rm -f error_count_test$(EXEEXT)
+	$(CXXLINK) $(error_count_test_OBJECTS) $(error_count_test_LDADD) $(LIBS)
 fastica_test$(EXEEXT): $(fastica_test_OBJECTS) $(fastica_test_DEPENDENCIES) 
 	@rm -f fastica_test$(EXEEXT)
 	$(CXXLINK) $(fastica_test_OBJECTS) $(fastica_test_LDADD) $(LIBS)
@@ -809,8 +827,10 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/circular_buffer_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/commfunc_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/convcode_test.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/converters_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/det_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/eigen_test.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/error_count_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fastica_test-fastica_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fastmath_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/filter_design_test.Po@am__quote@
