--- a/win32/itpp_mkl.vcproj
+++ b/win32/itpp_mkl.vcproj
@@ -48,7 +48,7 @@
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				WarnAsError="true"
+				WarnAsError="false"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
 			/>
@@ -112,7 +112,7 @@
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				WarnAsError="true"
+				WarnAsError="false"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
 			/>
@@ -171,10 +171,6 @@
 				</File>
 				<File
 					RelativePath="..\itpp\base\converters.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\itpp\base\factory.cpp"
 					>
 				</File>
 				<File
