--- a/win32/itpp_mkl_tests/Makefile.in
+++ b/win32/itpp_mkl_tests/Makefile.in
@@ -183,8 +183,10 @@ EXTRA_DIST = \
 	circular_buffer_test.vcproj \
 	commfunc_test.vcproj \
 	convcode_test.vcproj \
+	converters_test.vcproj \
 	det_test.vcproj \
 	eigen_test.vcproj \
+	error_count_test.vcproj \
 	fastica_test.vcproj \
 	fastmath_test.vcproj \
 	filter_design_test.vcproj \
