--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libitpp
 Priority: optional
 Maintainer: Kumar Appaiah <akumar@debian.org>
 Standards-Version: 3.8.3
-Build-Depends: debhelper (>= 5), doxygen (>= 1.5.1), libblas-dev, libfftw3-dev, texlive-latex-base, ghostscript, liblapack-dev, gfortran, quilt
+Build-Depends: debhelper (>= 5), doxygen (>= 1.5.1), libblas-dev, libfftw3-dev, texlive-latex-base, ghostscript, liblapack-dev, gfortran
 Section: libs
 Homepage: http://itpp.sourceforge.net
 Vcs-Git: git://git.debian.org/git/collab-maint/libitpp.git
@@ -11,7 +11,7 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/libitpp.git
 Package: libitpp-dev
 Section: libdevel
 Architecture: any
-Depends: libitpp6gf (= ${binary:Version})
+Depends: libitpp6gf (= ${binary:Version}), ${misc:Depends}
 Description: C++ library of signal processing and communication routines: Headers
  IT++ is a C++ library of mathematical, signal processing and
  communication classes and functions. Its main use is in simulation of
@@ -40,7 +40,7 @@ Package: libitpp6-dbg
 Section: debug
 Priority: extra
 Architecture: any
-Depends: libitpp6gf (= ${binary:Version})
+Depends: libitpp6gf (= ${binary:Version}), ${misc:Depends}
 Description: C++ library of signal processing and communication routines: Debug symbols
  IT++ is a C++ library of mathematical, signal processing and
  communication classes and functions. Its main use is in simulation of
@@ -56,6 +56,7 @@ Package: libitpp-doc
 Section: doc
 Architecture: all
 Recommends: dwww, www-browser
+Depends: ${misc:Depends}
 Description: C++ library of signal processing and communication routines: Documentation
  IT++ is a C++ library of mathematical, signal processing and
  communication classes and functions. Its main use is in simulation of
