--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/libitpp.git
 Package: libitpp-dev
 Section: libdevel
 Architecture: any
-Depends: libitpp6gf (= ${binary:Version}), ${misc:Depends}
+Depends: libitpp7 (= ${binary:Version}), ${misc:Depends}
 Description: C++ library of signal processing and communication routines: Headers
  IT++ is a C++ library of mathematical, signal processing and
  communication classes and functions. Its main use is in simulation of
@@ -22,11 +22,9 @@ Description: C++ library of signal processing and communication routines: Header
  .
  This package has the development libraries and headers for IT++.
 
-Package: libitpp6gf
+Package: libitpp7
 Section: libs
 Architecture: any
-Conflicts: libitpp6
-Replaces: libitpp6
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: C++ library of signal processing and communication routines
  IT++ is a C++ library of mathematical, signal processing and
@@ -36,11 +34,11 @@ Description: C++ library of signal processing and communication routines
  and matrix classes, and a set of accompanying routines. Such a kernel
  makes IT++ similar to MATLAB or GNU Octave .
 
-Package: libitpp6-dbg
+Package: libitpp7-dbg
 Section: debug
 Priority: extra
 Architecture: any
-Depends: libitpp6gf (= ${binary:Version}), ${misc:Depends}
+Depends: libitpp7 (= ${binary:Version}), ${misc:Depends}
 Description: C++ library of signal processing and communication routines: Debug symbols
  IT++ is a C++ library of mathematical, signal processing and
  communication classes and functions. Its main use is in simulation of
