Build-Depend on doxygen-latex instead of texlive-*. (Closes: #616256)

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libitpp
 Priority: optional
 Maintainer: Kumar Appaiah <akumar@debian.org>
 Standards-Version: 3.9.1
-Build-Depends: debhelper (>= 5), doxygen (>= 1.5.1), libblas-dev, libfftw3-dev, texlive-latex-base, ghostscript, liblapack-dev, gfortran
+Build-Depends: debhelper (>= 5), doxygen (>= 1.5.1), libblas-dev, libfftw3-dev, doxygen-latex, ghostscript, liblapack-dev, gfortran
 Section: libs
 Homepage: http://itpp.sourceforge.net
 Vcs-Git: git://git.debian.org/git/collab-maint/libitpp.git
