--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libitpp
 Priority: optional
 Maintainer: Kumar Appaiah <akumar@debian.org>
-Standards-Version: 3.9.2
+Standards-Version: 3.9.4
 Build-Depends: debhelper (>= 9), libblas-dev, libfftw3-dev, doxygen-latex, ghostscript, liblapack-dev, gfortran, libgtest-dev
 Section: libs
 Homepage: http://itpp.sourceforge.net
@@ -54,7 +54,7 @@ Package: libitpp-doc
 Section: doc
 Architecture: all
 Suggests: dwww, www-browser
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, libjs-jquery
 Description: C++ library of signal processing and communication routines: Documentation
  IT++ is a C++ library of mathematical, signal processing and
  communication classes and functions. Its main use is in simulation of
