--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libitpp
 Priority: optional
 Maintainer: Kumar Appaiah <akumar@debian.org>
 Standards-Version: 3.9.4
-Build-Depends: debhelper (>= 9), libblas-dev, libfftw3-dev, doxygen-latex, ghostscript, liblapack-dev, gfortran, libgtest-dev
+Build-Depends: debhelper (>= 9), libblas-dev, libfftw3-dev, doxygen-latex, ghostscript, liblapack-dev, gfortran, libgtest-dev, cmake
 Section: libs
 Homepage: http://itpp.sourceforge.net
 Vcs-Git: git://git.debian.org/git/collab-maint/libitpp.git
