--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,10 +150,16 @@ CHECK_CXX_FUNCTION_EXISTS ( std::isnan HAVE_STD_ISNAN )
 set (PACKAGE "itpp")
 set (PACKAGE_BUGREPORT "http://sourceforge.net/projects/itpp/forums/forum/115656")
 set (PACKAGE_NAME "IT++")
-set (PACKAGE_VERSION "4.3.rxxxx")
+set (PACKAGE_VERSION "4.3.1")
 set (PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")
 set (PACKAGE_TARNAME ${PACKAGE})
 set (PACKAGE_URL "")
+if (UNIX)
+  EXECUTE_PROCESS(COMMAND "date" "+%d/%m/%Y" OUTPUT_VARIABLE PACKAGE_DATE)
+  string(REGEX REPLACE "(..)/(..)/..(..).*" "\\1/\\2/\\3" PACKAGE_DATE "${PACKAGE_DATE}")
+else()
+  set(PACKAGE_DATE "")
+endif()
 
 if (WIN32 AND NOT MINGW)
   #TODO: remove this from future versions
